Admob広告について記載

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <header>
         <h1>プライバシーポリシー</h1>
         <p class="subtitle">Rizum（リズム）</p>
-        <p class="last-updated">最終更新日: 2025年9月30日</p>
+        <p class="last-updated">最終更新日: 2025年10月4日</p>
     </header>
 
     <main>
@@ -416,22 +416,58 @@
 
         <section>
             <h2>10. 広告について</h2>
-            <p>本アプリは広告を表示しません。したがって、広告に関連する個人情報の収集・第三者提供は一切行いません。</p>
+
+            <h3>10.1 AdMob広告の表示</h3>
+            <p>本アプリは、Google AdMob（以下「AdMob」といいます）を使用して広告を表示します。AdMobは、Google LLC（以下「Google」といいます）が提供する広告配信サービスです。</p>
+
+            <h3>10.2 AdMobによる情報収集</h3>
+            <p>AdMobは、広告配信の最適化のために、以下の情報を自動的に収集する場合があります。これらの情報は、当方ではなくGoogleによって収集・管理されます。</p>
+            <ul>
+                <li>デバイス情報（機種、OS、画面サイズ等）</li>
+                <li>広告識別子（IDFA/AAID）</li>
+                <li>IPアドレス（概略的な位置情報の取得に使用される場合があります）</li>
+                <li>広告の表示・クリック情報</li>
+                <li>アプリの利用状況（起動時間、使用時間等）</li>
+            </ul>
+
+            <div class="info-box">
+                <p><strong>重要:</strong> 当方は、AdMobが収集する情報を直接取得・管理することはありません。これらの情報は、Googleのプライバシーポリシーに基づいて管理されます。</p>
+            </div>
+
+            <h3>10.3 広告のパーソナライズ</h3>
+            <p>AdMobは、収集した情報を使用して、ユーザーの興味・関心に基づいたパーソナライズ広告を表示する場合があります。</p>
+
+            <h3>10.4 広告のオプトアウト</h3>
+            <p>パーソナライズ広告を希望されない場合、以下の方法でオプトアウトできます。</p>
+            <ul>
+                <li><strong>iOS:</strong> 設定 → プライバシーとセキュリティ → トラッキング → アプリからのトラッキング要求を許可をオフ、または 設定 → プライバシーとセキュリティ → Appleの広告 → パーソナライズされた広告をオフ</li>
+                <li><strong>Android:</strong> 設定 → Google → 広告 → 広告のパーソナライゼーションをオプトアウト</li>
+            </ul>
+
+            <div class="info-box">
+                <p><strong>注意:</strong> オプトアウトしても広告は表示されますが、パーソナライズされていない一般的な広告が表示されます。</p>
+            </div>
+
+            <h3>10.5 第三者の広告配信パートナー</h3>
+            <p>AdMobは、広告配信のために第三者の広告ネットワークを使用する場合があります。これらの第三者も、独自のプライバシーポリシーに基づいて情報を収集する場合があります。</p>
+
+            <h3>10.6 Googleのプライバシーポリシー</h3>
+            <p>AdMobおよび関連サービスの詳細については、以下をご確認ください。</p>
+            <ul>
+                <li><a href="https://policies.google.com/privacy" target="_blank" rel="noopener noreferrer">Googleプライバシーポリシー</a></li>
+                <li><a href="https://support.google.com/admob/answer/6128543" target="_blank" rel="noopener noreferrer">AdMobのデータ収集について</a></li>
+                <li><a href="https://support.google.com/admob/answer/9012903" target="_blank" rel="noopener noreferrer">EU ユーザーの同意ポリシー</a></li>
+            </ul>
+
         </section>
 
         <section>
-            <h2>11. 子供のプライバシー</h2>
-            <p>本アプリは13歳未満のお子様を対象としていません。13歳未満のお子様が本アプリを利用される場合は、必ず保護者の方の同意を得た上でご利用ください。</p>
-            <p>本アプリは、13歳未満の子供から故意に個人情報を収集することはありません。万が一、13歳未満の子供の個人情報を収集したことが判明した場合は、速やかに削除します。</p>
-        </section>
-
-        <section>
-            <h2>12. 国際的なデータ転送</h2>
+            <h2>11. 国際的なデータ転送</h2>
             <p>本アプリは、お客様のデータを国外のサーバーに転送することはありません。全てのデータはお客様のデバイス内に保存されます。</p>
         </section>
 
         <section>
-            <h2>13. プライバシーポリシーの変更</h2>
+            <h2>12. プライバシーポリシーの変更</h2>
             <p>当方は、必要に応じて本ポリシーを変更することがあります。変更する場合は、以下の方法でお客様に通知します。</p>
             <ul>
                 <li>アプリ内での通知表示</li>
@@ -442,7 +478,7 @@
         </section>
 
         <section>
-            <h2>14. お客様の権利</h2>
+            <h2>13. お客様の権利</h2>
             <p>お客様は、ご自身のデータについて以下の権利を有します。</p>
             <ul>
                 <li><strong>アクセス権:</strong> アプリ内でいつでもデータを閲覧できます</li>
@@ -453,7 +489,7 @@
         </section>
 
         <section>
-            <h2>15. 準拠法</h2>
+            <h2>14. 準拠法</h2>
             <p>本ポリシーは、日本国の法律に準拠し、日本国の法律に従って解釈されるものとします。個人情報の保護に関しては、個人情報保護法およびその関連法規を遵守します。</p>
         </section>
 
